# libspookyaction

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .platformio-ci.ini  CMakeLists.txt  CMakeListsUser.txt  README.md  doxygen.conf  gen-compiledb.py  library.json  platformio.ini  platformio.ini.sample  pytest_gcov.py  sdkconfig  sdkconfig.defaults  test_spooky_cov.py
cicd/: .platformio-ci.ini  Dockerfile  check_version.py  ci-helper.sh  platformio.ini  requirements.txt  sdkconfig  sdkconfig.defaults  ut-monitor.py
components/catch/: CMakeLists.txt
components/catch/catch/: catch.hpp
components/catch/include/: .gitignore  catch.hpp
docs/: Dockerfile  Makefile  common_tasks.rst  concepts.rst  conf.py  doxigen.conf  doxygen.conf  index.rst  requirements.txt  terminology.rst
examples/: initialize.cpp  select_tag.cpp  selftest.cpp
include/: any.hpp  bin_data.hpp  bits.hpp  bits_algo.hpp  channel.hpp  data.hpp  desfire.hpp  desfire2.hpp  msg.hpp  nfc.hpp  pn532.hpp  result.hpp
libspookyaction/: CMakeLists.txt  Kconfig  library.json
libspookyaction/examples/: app_desfire_demo.cpp  app_scan_loop.cpp  desfire_demo.cpp  initialize.cpp  platformio.ini  scan_any_target.cpp  scan_any_target_lowlev.cpp  scan_desfire.cpp  scan_desfire_lowlev.cpp  sdkconfig.defaults  select_tag.cpp  self_test.cpp  selftest.cpp
libspookyaction/include/desfire/: bits.hpp  cipher.hpp  cipher_provider.hpp  cmac_provider.hpp  crypto.hpp  crypto_algo.hpp  data.hpp  fs.hpp  kdf.hpp  key_actor.hpp  keys.hpp  log.h  msg.hpp  pcd.hpp  protocol.hpp  tag.hpp  tag_responder.hpp
libspookyaction/include/desfire/esp32/: cipher_provider.hpp  crypto_impl.hpp  mem_monitor.hpp  utils.hpp
libspookyaction/include/mlab/: pool.hpp
libspookyaction/include/pn532/: bits.hpp  bits_algo.hpp  channel.hpp  checksum.hpp  controller.hpp  data.hpp  desfire_pcd.hpp  log.h  msg.hpp  p2p.hpp  scanner.hpp
libspookyaction/include/pn532/esp32/: capable_mem.hpp  hsu.hpp  i2c.hpp  irq_assert.hpp  spi.hpp
libspookyaction/src/desfire/: cipher.cpp  cmac_provider.cpp  crypto.cpp  crypto_algo.cpp  data.cpp  fs.cpp  kdf.cpp  keys.cpp  msg.cpp  tag.cpp  tag_responder.cpp
libspookyaction/src/desfire/esp32/: crypto_impl.cpp  mem_monitor.cpp  utils.cpp
libspookyaction/src/mlab/: pool.cpp
libspookyaction/src/pn532/: channel.cpp  controller.cpp  data.cpp  desfire_pcd.cpp  msg.cpp  p2p.cpp  scanner.cpp
libspookyaction/src/pn532/esp32/: hsu.cpp  i2c.cpp  spi.cpp
misc/: gen-compiledb.py
src/: channel.cpp  data.cpp  desfire.cpp  desfire2.cpp  hsu.cpp  main.cpp  msg.cpp  nfc.cpp  (+3 more)
tests/: CMakeLists.txt  Kconfig  main.cpp  platformio.ini.sample  sdkconfig  sdkconfig-coverage.defaults  sdkconfig-wolfssl.defaults  sdkconfig.defaults
tests/components/libspookyaction/: CMakeLists.txt
tests/components/main/: CMakeLists.txt
tests/components/mittelib/: CMakeLists.txt
tests/components/unity/: CMakeLists.txt
tests/lib/: libspookyaction  mittelib
tests/src/: main.cpp  unittest_transport.h
tests/src/test/: main.cpp  test_desfire_ciphers.cpp  test_pn532.cpp  utils.cpp
tests/src/ut/: registrar.cpp  test_desfire_ciphers.cpp  test_desfire_ciphers.hpp  test_desfire_exchanges.cpp  test_desfire_exchanges.hpp  test_desfire_files.cpp  test_desfire_files.hpp  test_desfire_fs.cpp  test_desfire_fs.hpp  test_desfire_main.cpp  test_desfire_main.hpp  test_pn532.cpp  utils.cpp  utils.hpp
tests/test/: main.cpp
tests/ut/: facility.cpp  facility.hpp  helpers.cpp  helpers.hpp  pn532_pinout.hpp  registrar.hpp  test_desfire_ciphers.cpp  test_desfire_ciphers.hpp  test_desfire_exchanges.cpp  test_desfire_files.cpp  test_desfire_fs.cpp  test_desfire_fs.hpp  test_desfire_main.cpp  test_desfire_main.hpp  test_pn532.cpp  test_pn532.hpp  utils.cpp
tests/wolfssl_override/: user_settings.h
(+194 files in other folders)
